# peptide-discover

./: .gitignore  Makefile  PEPTIDE_PIPELINE.md  README.md  pyproject.toml
experiments/: README.md  RESULTS.md  TrkB_partial_results.json  amp_mdr_ecoli.py  baseline_known_peptides.py  bpc157_docking.py
src/peptide_discover/: __init__.py  __main__.py
src/peptide_discover/cli/: binding_cmd.py  generate_cmd.py  main.py  rank_cmd.py  run_cmd.py  screen_cmd.py  target_cmd.py
src/peptide_discover/config/: settings.py  tracks.py
src/peptide_discover/io/: formats.py  pdb_fetch.py  uniprot.py
src/peptide_discover/models/: peptide.py  pipeline.py  scores.py  target.py
src/peptide_discover/stages/: binding.py  generation.py  ranking.py  screening.py  target_prep.py
src/peptide_discover/utils/: gpu.py  logging.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_stages/: test_screening.py  test_target_prep.py
